unauthorized design bug, bubble was partly visible when hidden

--- a/assets/widgetCss.css
+++ b/assets/widgetCss.css
@@ -316,6 +316,9 @@
 .remotestorage-unauthorized {
     display: none;
 }
+.remotestorage-state-unauthorized .bubble.hidden{
+    display: none;
+}
 .remotestorage-state-unauthorized .remotestorage-connected,
 .remotestorage-state-unauthorized .remotestorage-unauthorized {
     display: block;
